--- a/vignettes/GeneAccord.Rmd
+++ b/vignettes/GeneAccord.Rmd
@@ -1,9 +1,8 @@
 ---
 title: "Package 'GeneAccord'"
 author: "Ariane L. Moore et al."
-date: "`r Sys.Date()`"
-graphics: yes
-output: rmarkdown::html_vignette
+package: GeneAccord
+output: BiocStyle::html_document
 vignette: >
     %\VignetteIndexEntry{GeneAccord}
     %\VignetteEngine{knitr::rmarkdown}
@@ -26,81 +25,90 @@ GeneAccord is a statistical framework to examine the combinations of clones that
 
 ## Installation
 
-You can install the package as described in the `README` of this package.
+You can install the package by typing the following commands in R:
 ```{r}
+install.packages("devtools")
+
+# to install its dependencies
+install.packages(c("biomaRt", "caTools", "dplyr", "ggplot2", "gtools", "ggpubr", "magrittr", "maxLik", "RColorBrewer", "reshape2", "tibble"))
+
+library(devtools)
+
+install_github("cbg-ethz/GeneAccord")
+
 library(GeneAccord)
 ```
 ***
 
 ## 1. Prepare patient data
 
-The first step consists of reading in and processing the patient data separately for each patient. If it takes too much time, this can be done for all patients in parallel on a cluster. In this example, we read in the data for patient "01". The example data is stored in the external data directory of this package. The phylogenetic tree inference was performed with the R package `Cloe` [[4](https://doi.org/10.1214/16-AOAS986)], which was run 20 times with 20 different seeds (seed = 5, 10, 15, ..., 100) to capture the uncertainty in the phylogenetic tree inference. All 20 gene-to-clone assignments for patient 01 can be found as follows.
+The first step consists of reading in and processing the patient data separately for each patient. If it takes too much time, this can be done for all patients in parallel on a cluster. In this example, we read in the data for patient "50". The example data is stored in the external data directory of this package. The phylogenetic tree inference was performed with the R package `r Rpackage("cloe")` [[4](https://doi.org/10.1214/16-AOAS986)], which was run 20 times with 20 different seeds (seed = 5, 10, 15, ..., 100) to capture the uncertainty in the phylogenetic tree inference. All 20 gene-to-clone assignments for patient 50 can be found as follows.
 
 ```{r}
 # defines the path to the external data directory
 ext_data_dir <- system.file('extdata', package = 'GeneAccord')
 
 # set the patient id
-pat_id <- "01"
+pat_id <- "50"
 
-# find all csv-files from patient 01, which are in the clonal_genotypes subdirectory, with seeds 5, 10, 15, ..., 100
-input_files_01 <- paste(ext_data_dir, "/clonal_genotypes/cloe_seed", seq(5, 100, by = 5), "/", pat_id, ".csv", sep = "")
-# 'input_files_01' is now a vector with all 20 csv-files for this patient
+# find all csv-files from patient 50, which are in the clonal_genotypes subdirectory, with seeds 5, 10, 15, ..., 100
+input_files_50 <- paste(ext_data_dir, "/clonal_genotypes/cloe_seed", seq(5, 100, by = 5), "/", pat_id, ".csv", sep = "")
+# 'input_files_50' is now a vector with all 20 csv-files for this patient
 ```
 
 So to analyze your own data, you need to set a vector with all gene-to-clone assignments in csv-format for each patient. Such a csv-file may look like this.
 
 ```{r}
-head(read.csv(input_files_01[1]))
+head(read.csv(input_files_50[1]))
 ```
 
-The first column lists the altered genes or pathways. In this manual, we will use the term genes, even if the altered entities can also be pathways. The columns that come after the gene indicate in which clone the gene is mutated. In this package, data tables or csv-files are stored and used as tibbles. Tibbles are a novel way to represent data frames. Please refer to the R package `tibble` [[5](https://CRAN.R-project.org/package=tibble)] for more information. Now we read in the patient's gene-to-clone assignments from the collection of tree inferences to obtain it in a tibble format.
+The first column lists the altered genes or pathways. In this manual, we will use the term genes, even if the altered entities can also be pathways. The columns that come after the gene indicate in which clone the gene is mutated. In this package, data tables or csv-files are stored and used as tibbles. Tibbles are a novel way to represent data frames. Please refer to the R package `r CRANpkg("tibble")` [5] for more information. Now we read in the patient's gene-to-clone assignments from the collection of tree inferences to obtain it in a tibble format.
 
 ```{r}
-clone_tbl_01_all_trees <- create_tbl_tree_collection(input_files_01)
+clone_tbl_50_all_trees <- create_tbl_tree_collection(input_files_50)
 
 ```
 
 Let's look at the tibble:
 
 ```{r}
-clone_tbl_01_all_trees
+clone_tbl_50_all_trees
 ```
 
 The column `file_name` indicates from which csv-file the information comes. The patient identifier is stored in `patient_id`, and the column `altered_entity` lists the mutated gene. The gene-to-clone assignments are in the columns `clone1`, `clone2`, ..., up to, by default `clone7`. Even if this patient had fewer clones in the assignment, the additional clone columns make sure that all data from all patients can be stored in the same tibble. The additional clone columns are just always zero, if a patient had fewer clones. If you know that you have more than seven clones at maximum across all patients and trees, the parameter `max_num_clones` of `create_tbl_tree_collection` can be set accordingly. The last column in the tibble `tree_id` indicates from which of the trees the respective gene-to-clone assignment comes. In this tibble, we have 20 different tree identifiers, because we use the gene-to-clone assignments from 20 tree inference runs.
 
 ```{r}
 # print all 20 tree id's
-unique(as.character(clone_tbl_01_all_trees$tree_id))
+unique(as.character(clone_tbl_50_all_trees$tree_id))
 ```
 
 The next step is to compute the rate of clonal exclusivity for this patient, and for each of the tree inferences separately. 
 ```{r}
-rates_clon_excl_01 <- compute_rates_clon_excl(clone_tbl_01_all_trees)
+rates_clon_excl_50 <- compute_rates_clon_excl(clone_tbl_50_all_trees)
 ```
 
 
 ```{r}
-head(rates_clon_excl_01)
+head(rates_clon_excl_50)
 
-# average rate for patient 01 across trees
-m_01 <- mean(rates_clon_excl_01)
+# average rate for patient 50 across trees
+m_50 <- mean(rates_clon_excl_50)
 ```
 
 Now, for each gene pair separately, two values are computed: The number of times the gene pair occurs in the collection of trees, and the number of times it was clonally exclusive in these trees. A gene pair does not have to occur in all trees, because sometimes a gene is not assigned to a clone in a tree. Hence, the number of times a pair occurs may be, e.g. 19 of 20 times. And the number of times a pair is clonally exlcusive in the trees of course varies from gene pair to gene pair.
 
 ```{r}
 # compute the histogram of how often gene pairs occur in the trees, and how often they are clonally exclusive
-hist_of_num_trees_clon_excl_01 <- get_hist_clon_excl(clone_tbl_01_all_trees)
+hist_of_num_trees_clon_excl_50 <- get_hist_clon_excl(clone_tbl_50_all_trees)
 ```
 
 ```{r}
-head(hist_of_num_trees_clon_excl_01[[1]])
-head(hist_of_num_trees_clon_excl_01[[2]])
+hist_of_num_trees_clon_excl_50[[1]]
+hist_of_num_trees_clon_excl_50[[2]]
 ```
-We observe, for instance, that some gene pairs occur in 20 trees, and are always co-occurring in the same clones.
+We observe, for instance, that one gene pair occurs in 19 trees, and is clonally exclusive in 18 of these.
 
-The three steps demonstrated here (`create_tbl_tree_collection`, `compute_rates_clon_excl`, and `get_hist_clon_excl`) for patient 01 have to be done for all patients in the cohort. If you have a high number of patients, you can run it in parallel on a computing cluster. If you choose to run it sequentially, the following chunk of code is an example of how this would need to be done.
+The three steps demonstrated here (`create_tbl_tree_collection`, `compute_rates_clon_excl`, and `get_hist_clon_excl`) for patient 50 have to be done for all patients in the cohort. If you have a high number of patients, you can run it in parallel on a computing cluster. If you choose to run it sequentially, the following chunk of code is an example of how this would need to be done.
 
 
 ```{r, eval = F}
@@ -198,27 +206,27 @@ list_of_num_trees_all_pats[[2]]
 list_of_clon_excl_all_pats[[2]]
 ```
 
-For each number of patients, a pair can be mutated in, an ECDF is built separately. With the parameter `num_pat_pair_max`, it can be decided up to which number to compute it. You can use the function `pairs_in_patients_hist` to find out what is the maximum number of patients that pairs are mutated in. All unique gene pairs are efficiently computed using functionalities from the R package `caTools` [[6](https://CRAN.R-project.org/package=caTools)].
+For each number of patients, a pair can be mutated in, an ECDF is built separately. With the parameter `num_pat_pair_max`, it can be decided up to which number to compute it. You can use the function `pairs_in_patients_hist` to find out what is the maximum number of patients that pairs are mutated in. All unique gene pairs are efficiently computed using functionalities from the R package `r CRANpkg("caTools")` [6].
 
 ```{r}
 pairs_in_patients_hist(clone_tbl_all_pats_all_trees)
 ```
 
-In this data set, a total of 5'945 pairs are mutated in just one patient, and 274 pairs are mutated in two patients. GeneAccord will only consider pairs that occur in more than one patient. One pair is mutated in 15 patients, which is the maximum number. So, in practice, `num_pat_pair_max = 15` should be chosen. For the vignette, to demonstrate the functionality of the package, we set it to three such that it runs faster.
+In this data set, a total of 5,945 pairs are mutated in just one patient, and 274 pairs are mutated in two patients. GeneAccord will only consider pairs that occur in more than one patient. One pair is mutated in 15 patients, which is the maximum number. So, in practice, `num_pat_pair_max = 15` should be chosen. For the vignette, to demonstrate the functionality of the package, we set it to three such that it runs faster.
 
 ```{r}
 num_pat_pair_max <- 3
 ```
 
-The following command will generate the ECDF of the test statistic under the null for this data set. The number of pairs that are simulated is set to 1,000. This step may take quite some time. 
+The following command will generate the ECDF of the test statistic under the null for this data set. The number of pairs that are simulated is set to 100. This step may take quite some time. 
 
 ```{r}
 set.seed(1234)
 
-ecdf_list <- generate_ecdf_test_stat(avg_rates_m, list_of_num_trees_all_pats, list_of_clon_excl_all_pats, num_pat_pair_max, num_pairs_sim = 1000)
+ecdf_list <- generate_ecdf_test_stat(avg_rates_m, list_of_num_trees_all_pats, list_of_clon_excl_all_pats, num_pat_pair_max, num_pairs_sim = 100)
 ```
 
-In practice, it is recommended that the parameter `num_pairs_sim` is set to a higher value, to get most accurate results. Here, as a demonstration, it was set to 1,000 such that it runs faster. However, we advice to choose rather a higher number in your analysis, e.g. 100,000. The function then takes much more time, but it could be run over night on a computing cluster. For the purpose of this vignette, the pre-computed ECDF can be loaded, which was run with `num_pairs_sim = 100000`.
+In practice, it is recommended that the parameter `num_pairs_sim` is set to a higher value, to get most accurate results. Here, as a demonstration, it was set to 100 such that it runs faster. However, we advice to choose rather a higher number in your analysis, e.g. 100,000. The function then takes much more time, but it could be run over night on a computing cluster. For the purpose of this vignette, the pre-computed ECDF can be loaded, which was run with `num_pairs_sim = 100000`.
 
 ```{r}
 data("ecdf_list")
@@ -230,7 +238,7 @@ The distribution of the test statistic under the null will later be used in the 
 
 ## 3. Clonal exclusivity test
 
-Now, we're ready to perform the clonal exclusivity test to identify pairs of genes that are mutated in different clones more often than expected. To this end, we call the function `GeneAccord`. The required input parameters are the tibble containing the gene-to-clone assignments from all patients and all trees, the average rates of clonal exclusivity, and the ECDF's as computed in step 2 of this vignette. This function makes use of functionalities from the R packages `gTools` [[7](https://CRAN.R-project.org/package=gtools)], and `maxLik` [[8](https://CRAN.R-project.org/package=maxLik)].
+Now, we're ready to perform the clonal exclusivity test to identify pairs of genes that are mutated in different clones more often than expected. To this end, we call the function `GeneAccord`. The required input parameters are the tibble containing the gene-to-clone assignments from all patients and all trees, the average rates of clonal exclusivity, and the ECDF's as computed in step 2 of this vignette. This function makes use of functionalities from the R packages `r CRANpkg("gTools")` [7], and `r CRANpkg("maxLik")` [8].
 
 
 ```{r}
@@ -241,7 +249,7 @@ res_pairs <- GeneAccord(clone_tbl_all_pats_all_trees, avg_rates_m, ecdf_list)
 
 ## 4. Examining and visualizing results
 
-The results tibble now contains all pairs of genes that are mutated together in at least two patients, and whose delta parameter was greater zero, indicating that they tend to be clonally exclusive. See [1] for more details about the parameter delta. We can extract the significant pairs using the pipe command `%>%` from the R package `magrittr` [[9](https://CRAN.R-project.org/package=magrittr)], and using the function `filter` from the R package `dplyr` [[12](https://CRAN.R-project.org/package=dplyr)].
+The results tibble now contains all pairs of genes that are mutated together in at least two patients, and whose delta parameter was greater zero, indicating that they tend to be clonally exclusive. See [1] for more details about the parameter delta. We can extract the significant pairs using the pipe command `%>%` from the R package `r CRANpkg("magrittr")` [9], and using the function `filter` from the R package `r CRANpkg("dplyr")` [12].
 
 ```{r}
 suppressMessages(library(magrittr))
@@ -254,7 +262,7 @@ sig_pairs <- res_pairs %>% filter(qval < 0.05)
 sig_pairs[order(sig_pairs$pval),]
 ```
 
-We notice that the gene identifiers are ensembl gene id's. In order to find out the corresponding gene names, you can use the function `map_pairs_to_hgnc_symbols`. First, a tibble containing gene id conversions needs to be created. The function to do so,  `create_ensembl_gene_tbl_hg`, makes use of functionalities of the Bioconductor R package `BiomaRt` [[10, 11](https://bioconductor.org/packages/release/bioc/html/biomaRt.html)].
+We notice that the gene identifiers are ensembl gene id's. In order to find out the corresponding gene names, you can use the function `map_pairs_to_hgnc_symbols`. First, a tibble containing gene id conversions needs to be created. The function to do so,  `create_ensembl_gene_tbl_hg`, makes use of functionalities of the Bioconductor R package `r Biocpkg("BiomaRt")` [10, 11].
 
 ```{r, eval = F}
 # this will create a tibble with ensembl gene id's and corresponding hgnc gene symbols of the human genes
@@ -307,13 +315,13 @@ if(file.exists(sig_pairs_tsv)){
 
 The ECDF's of the test statistic under the null hypothesis can also be visualized.
 
-```{r, fig.height=5, fig.width=12}
+```{r, fig.height=5, fig.width=12, fig.wide=TRUE}
 # plot the ECDF of the test statistic under the null
 plot_ecdf_test_stat(ecdf_list)
 
 ```
 
-Using functions from the R package `dplyr` [[12](https://CRAN.R-project.org/package=dplyr)], we can extract information such as how many pairs are mutated in how many patients.
+Using functions from the R package `r CRANpkg("dplyr")` [12], we can extract information such as how many pairs are mutated in how many patients.
 
 ```{r}
 res_pairs %>% select(num_patients) %>% group_by(num_patients) %>% tally()
@@ -321,15 +329,15 @@ res_pairs %>% select(num_patients) %>% group_by(num_patients) %>% tally()
 
 We observe that most pairs are just mutated in two patients, and a few are mutated in three patients. These pairs in the results tibble were those mutated in more than one patient and who tend to be clonally exclusive.
 
-The average rates of clonal exclusivity can also be visualized with the function `plot_rates_clon_excl`, which makes use of functionalities from the `ggplot2` R package [[13](https://cran.r-project.org/web/packages/ggplot2/index.html)]. 
+The average rates of clonal exclusivity can also be visualized with the function `plot_rates_clon_excl`, which makes use of functionalities from the R package `r CRANpkg("ggplot2")` [13]. 
 
-```{r, fig.height=10, fig.width=5}
+```{r, fig.height=10, fig.width=5, fig.small=TRUE}
 plot_rates_clon_excl(avg_rates_m, clone_tbl_all_pats_all_trees)
 ```
 
 The function also returns the average number of clones across the collection of trees for each patient. A clone is only counted if at least one gene is assigned to it.
 
-Finally, the pairs of interest can also be visualized in a heatmap that shows in the respective patient in which clone the gene is mutated. The function `heatmap_clones_gene_pat` makes use of functionalities from the R packages `ggpubr` [[14](https://CRAN.R-project.org/package=ggpubr)], and `reshape2` [[15](http://www.jstatsoft.org/v21/i12/)]. 
+Finally, the pairs of interest can also be visualized in a heatmap that shows in the respective patient in which clone the gene is mutated. The function `heatmap_clones_gene_pat` makes use of functionalities from the R packages `r CRANpkg("ggpubr")` [14], and `r CRANpkg("reshape2")` [15]. 
 
 ```{r, fig.width=8, fig.height=5}
 # extract the patient id's in which the pairs are mutated
